frontend/src/pages/UserSemesters/user_semesters.module.css
.general_area {
    background-color: #efefef;
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
}

.container_70 {
    width: min(max(800px, 60%), 100%);
    padding-left: 2rem;
    padding-right: 2rem;
    align-self: center;
    justify-self: center;
    margin: 0 auto;
}

.semester_area {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(27rem, 1fr));
    padding: 2rem 1rem 2rem 1rem;
    gap: 1rem;
    overflow-y: scroll;
}

